# myowneditor

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  format.sh  kilo  kilo.c
includes/: main.h  terminal.h
includes/kilo/: buffer.h  editoroperations.h  fileio.h  input.h  main.h  output.h  rowoperations.h  terminal.h
src/: CMakeLists.txt  buffer.c  editoroperations.c  fileio.c  find.c  input.c  main.c  output.c  rowoperations.c  terminal.c
texts/: horay
